[fix] minor fix for progress bar